infra/kubernetes/ingress-auth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
spec:
  tls:
    - secretName: tls
      hosts:
        - grafana.lexicolatin.com
        - kibana.lexicolatin.com
  rules:
    - host: grafana.lexicolatin.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-ingress
                port:
                  number: 80
    - host: kibana.lexicolatin.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-ingress
                port:
                  number: 5601
---
kind: Service
apiVersion: v1
metadata:
  name: grafana-ingress
  namespace: default
spec:
  type: ExternalName
  externalName: monitoring-grafana.monitoring.svc.cluster.local
  ports:
    - port: 80
---
kind: Service
apiVersion: v1
metadata:
  name: kibana-ingress
  namespace: default
spec:
  type: ExternalName
  externalName: kibana.logging.svc.cluster.local
  ports:
    - port: 5601
